# advanced-python

./: .gitignore
functions/higher-order-functions/: decorators.py  function_with_function_parameter.py  returning_function.py
functions/math/: determinant_of_matrix.py  multiply_matrices.py
projects/concurrency/: async.py  multiproc.py  prime_number_calc.py
projects/django_projects/image_vault/: Dockerfile  docker-compose.yml  requirements.txt
projects/django_projects/image_vault/config/: celery.py  settings.py  urls.py
projects/django_projects/image_vault/images/: forms.py  models.py  tasks.py  views.py
projects/django_projects/image_vault/images/migrations/: 0001_initial.py
projects/django_projects/image_vault/templates/images/: upload.html
projects/fastapi/: main.py  middlewares.py  test.py
projects/fastapi/db_integration/: docker-compose.yml  pyproject.toml
projects/fastapi/db_integration/src/: config.py  main.py  models.py
projects/fastapi/db_integration/src/alembic/versions/: 1d12be56d073_create_test_table.py  71453b604ec1_create_user_and_items_table.py  b06269a7eac4_create_test_table.py
projects/fastapi/dependency_injection/: main.py
projects/fastapi/first_lesson/: middlewares.py
projects/fastapi/mongodb_integration/: main.py
projects/fastapi/setup_dev_env/: .pre-commit-config.yaml  main.py  middleware.py  models.py  pyproject.toml
projects/fastapi/simple_crud_app/: pyproject.toml
projects/fastapi/simple_crud_app/app/: main.py  models.py
projects/fastapi/structure_setup/: README.md
